[package]
name = "hightide"
version = "0.1.2"
authors = ["Steve Lee <sphen.lee@gmail.com>"]
edition = "2018"

description = "extension for the tide web framework"
license = "MIT"
repository = "https://github.com/sphenlee/hightide"
documentation = "https://docs.rs/hightide"
readme = "README.md"

keywords = ["web", "tide", "http"]
categories = ["web-programming::http-server"]

[dependencies]
tide = "0.13.0"
futures = "0.3.5"
async-trait = "0.1.40"
hyperx = "1.1.0"
